# videojuegos-lemmings

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  alpha_mask.txt  cmake_install.cmake  compile.sh  geralt_eats.cpp  keyBindings.conf  levelsInfo.txt  main  tile_generator.py
assets/: ginkana ingles.html
assets/ginkana ingles_files/: RotateCookiesPage.html  api.js  cloudshell.js  gtm.js  gtm_002.js  m=b.css  m=core.css  m=core.es  m=pm_title_service.es  m=sy25,sy38,sy50,sy14,sy22,sy4x,sy4z,sy4h,sy4y,sy51,pm_learn_.es  m=sy28,sy55,sy56,pm_navigation_focus_rif.es  m=sy40,sy57,pm_page_not_found_view.es  m=sy4t,sy12,sy4v,sy4u,sy4w,pm_feedback_service.es  projectcreate.html  projectcreate_002.html  tool_library.js  walkthrough.js
assets/ginkana ingles_files/projectcreate_data/: m=b.es
assets/menu/: config_control_button_raw.xcf  hud_button_raw.xcf  menu_button.xcf  menu_button_wide.xcf  menu_icons.xcf  option_button.xcf  slider_button.xcf
include/engine/: IO.hpp  charge_emitter.hpp  engine.hpp  entity.hpp  fixed_text.hpp  game.hpp  particle.hpp  physics.hpp  render_2D.hpp  rigid_body.hpp  rigid_entity.hpp  shader.hpp  sound_mixer.hpp  trigger.hpp
include/geometry/: bounding_box.hpp  collision_point.hpp  point.hpp  ray.hpp  transform.hpp  vector.hpp
include/lib/: error.hpp  spectrum.hpp  texture.hpp  types.hpp
include/math/: math.hpp  matrix3x3.hpp  matrix4x4.hpp
scripts/: count_lines.py  install_dependencies.sh
src/: main.cpp
src/AI/: core.cpp
src/engine/: Engine.cpp  Engine.hpp  Entity.cpp  Physics.cpp  Render_2D.cpp  Rigid_entity.cpp  engine.cpp  entity.cpp  fixed_text.cpp  game.cpp  photon_mapping.cpp  physics.cpp  render_2D.cpp  rigid_body.cpp  rigid_entity.cpp  shader.cpp  trigger.cpp
src/geometry/: BoundingBox.cpp  Point.cpp  Ray.cpp  Vector.cpp  bounding_box.ipp  point.ipp  ray.cpp  ray.ipp  transform.cpp  transform.ipp  vector.ipp
src/geralt_eats/: Apple.cpp  Apple.hpp  Geralt.cpp  Geralt.hpp  Geralt_eats_camera.cpp  Geralt_eats_camera.hpp  Geralt_eats_game.cpp  Geralt_eats_game.hpp  Lemming_hero.hpp  MainCamera.hpp  apple.cpp  electric_field.hpp  electrical_field.hpp  geralt.cpp  geralt_eats.cpp  geralt_eats_camera.cpp  geralt_eats_game.cpp  prueba.cpp  test_obj.hpp
src/lemmings/: AI_autoplay.cpp  AI_autoplay.hpp  Camera_info.hpp  Chain.hpp  Cursor.hpp  Door.hpp  Dynamic_digit_image.hpp  Dynamic_text_image.hpp  Dynamic_value_display.hpp  Fire.hpp  Flamethrower.hpp  Game_info.hpp  Gate.hpp  HUD.hpp  HUDs.hpp  Lemming.hpp  Lemmings_camera.hpp  Lemmings_game.hpp  Level.hpp  Level_info.hpp  Level_manager.cpp  Level_manager.hpp  Liquid.hpp  Screen_manager.hpp  Spinner.hpp  Structure.hpp  Text_image.hpp  lemmings.cpp  utils.hpp
src/lemmings/AI/: tile_space.hpp  tile_space.ipp
src/lemmings/camera/: Dynamic_camera.hpp  Static_camera.hpp
src/lemmings/cursor/: Cursor.hpp  Cursor_menu.hpp
src/lemmings/display/: Dynamic_counter_image.hpp  Dynamic_digit_image.hpp  Dynamic_text_image.hpp  Dynamic_value_display.hpp  Map_dynamic.hpp  Text_displayer.hpp  Text_dynamic.hpp  Text_image.hpp
src/lemmings/hud/: HUD.hpp  HUDs.hpp  Minimap_view.hpp
src/lemmings/keyboard/: Keyboard_manager.hpp
src/lemmings/memory/: keyBindings.hpp  levelsInfo.hpp  memory.hpp  volumeAndAspect.hpp
src/lemmings/menu/: Credit_animation.hpp  Credit_text.hpp  Intro.hpp  Menu.hpp  Menu_animation.hpp  Menu_arrow.hpp  Menu_button.hpp  Menu_mouse_handler.hpp  Menu_option_button.hpp  Menu_slider.hpp
src/lemmings/screen/: Screen_manager.hpp  Transition.hpp
src/lemmings/structure/: Antimatter_beam.hpp  Antimatter_beam_trigger.hpp  Ball_zapper.hpp  Bear_trap.hpp  Bear_trap_trigger.hpp  Brick.hpp  Chain.hpp  Directional_structure.hpp  Directional_wall.hpp  Door.hpp  Fire.hpp  Flamethrower.hpp  Gate.hpp  Gate_trigger.hpp  Icethrower.hpp  Liquid.hpp  Liquid_trigger.hpp  Pin.hpp  Pin_trigger.hpp  Rock_crusher.hpp  Rock_crusher_trigger.hpp  Spinner.hpp  Structure.hpp  Thumper.hpp  Tons.hpp  Tons_trigger.hpp
src/lib/: Pair.cpp  Spectrum.cpp  Texture.cpp  spectrum.ipp  texture.cpp  types.h  types.ipp
src/math/: Matrix3x3.cpp  Matrix4x4.cpp  Transform.cpp  math.cpp  math.ipp  matrix3x3.ipp  matrix4x4.ipp
